# willow2-sdk-mods

./: .clangd  .cruft.json  .gitignore  .gitmodules  .typos.toml  CMakeLists.txt  CMakePresets.json  modinfo.json  prepare_releases.py  pyproject.toml
.github/workflows/: build.yml
AltUseVendors/: Readme.md  __init__.py
alt_use_vendors/: Readme.md  __init__.py  ak_events.py  enums.py  pyproject.toml  shop_info.py
apples_borderlands_cheats/: Readme.md  __init__.py  pyproject.toml
apples_borderlands_cheats/cheats/: __init__.py  add_op_level.py  free_shops.py  ghost.py  god.py  infinite_ammo.py  instant_cooldown.py  kill_all.py  level_up.py  one_shot.py  passive_mode.py  reset_shops.py  revive.py  suicide.py  tp_travels.py
command_extensions/: Readme.md  Writing-Mods.md  __init__.py  ce_legacy_compat.py  ce_legacy_compat_builtins.py  pyproject.toml
command_extensions/builtins/: __init__.py  chat.py  clone.py  clone_bpd.py  keep_alive.py  load_package.py  pyb.py  suppress_chat.py  unlock_package.py
command_extensions/file_parser/: blcm_parser.cpp  main.cpp  matcher.cpp
command_extensions/file_parser/blcm_preprocessor/: blcm_preprocessor.cpp
command_extensions/file_parser_tests/: _test.py  test_zetahaul_error.blcm.json  test_zetahaul_error.blcm.test_in
enemy_level_randomizer/: Readme.md  __init__.py  pyproject.toml
equip_locker/: Readme.md  __init__.py  pyproject.toml
equip_locker/restrictions/: __init__.py  allegiance.py  rarity.py  weap_item_type.py
hide_undiscovered_missions/: Readme.md  __init__.py  pyproject.toml
mario/: Readme.md  __init__.py  pyproject.toml
offline_helpers/: Readme.md  __init__.py  pyproject.toml
ohko/: Readme.md  __init__.py  pyproject.toml
scaling_adjuster/: Readme.md  __init__.py  pyproject.toml
spawn_multiplier/: Readme.md  __init__.py  pyproject.toml
text_mod_loader/: CMakeLists.txt  Readme.md  __init__.py  anti_circular_import.py  blimp.py  file_parser.pyi  hotfixes.py  legacy_compat.py  loader.py  pyproject.toml  settings.py  text_mod.py
text_mod_loader/file_parser/: blcm_parser.cpp  blcm_parser.h  filtertool_parser.cpp  filtertool_parser.h  line_parser.cpp  line_parser.h  main.cpp  parse_result.cpp  parse_result.h  pch.h  util.cpp  util.h
true_damage_logger/: Readme.md  __init__.py  pyproject.toml
vendor_edit/: Readme.md  __init__.py  bugfix.py  category_items.py  dummy_items.py  editor.py  hooks.py  item_codes.py  modded_item_codes.md  packages.py  pyproject.toml  replacement_lists.py  spawner.py  vendor_movie.py  zdict
vendor_edit/zdict_experiments/: .gitignore  Readme.md  autofuzz.py  constructor_to_replacements.py  corpus.tar.lzma  eval.cpp  gen_dict.py  plot_dicts.py  prettify.py  unique_balances.txt  unique_definitions.txt  unique_manufacturers.txt  unique_parts.txt  zdict.tar.zstd  zdict.wip.0  zdict.wip.288
