[project]
name = "hide_undiscovered_missions"
version = "2"
authors = [{ name = "apple1417" }]
description = """\
Hides undiscoved missions in the mission log.
"""

[project.urls]
Changelog = "https://github.com/apple1417/willow2-sdk-mods/blob/master/hide_undiscovered_missions/Readme.md"

[tool.sdkmod]
name = "Hide Undiscovered Missions"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
coop_support = "ClientSide"
download = "https://github.com/apple1417/willow2-sdk-mods/releases/download/nightly/hide_undiscovered_missions.sdkmod"
