[project]
name = "offline_helpers"
version = "2"
authors = [{ name = "apple1417" }]
description = """\
Adds a few small features useful when playing offline.
"""

[project.urls]
Changelog = "https://github.com/apple1417/willow2-sdk-mods/blob/master/offline_helpers/Readme.md"

[tool.sdkmod]
name = "Offline Helpers"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
coop_support = "ClientSide"
download = "https://github.com/apple1417/willow2-sdk-mods/releases/download/nightly/offline_helpers.sdkmod"
