[project]
name = "ohko"
version = "2"
authors = [{ name = "apple1417" }]
description = """\
Makes you die in one hit.
"""

[project.urls]
Changelog = "https://github.com/apple1417/willow2-sdk-mods/blob/master/ohko/Readme.md"

[tool.sdkmod]
name = "One-Hit KO"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/apple1417/willow2-sdk-mods/releases/download/nightly/ohko.sdkmod"
