[project]
name = "vendor_edit"
version = "4"
authors = [{ name = "apple1417" }]
description = """\
Lets you edit all your gear while in game, using the familiar vendor menus.
"""

[project.urls]
Changelog = "https://github.com/apple1417/willow2-sdk-mods/blob/master/vendor_edit/Readme.md"

[tool.sdkmod]
name = "Vendor Edit"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/apple1417/willow2-sdk-mods/releases/download/nightly/vendor_edit.sdkmod"

[tool.sdkmod_release_script]
files = [
    "*.md",
    "*.py",
    "zdict",
]
